# NeuraSQL

./: .dockerignore  .gitignore  Dockerfile  compose.yml  ngrok.yml  pyproject.toml  requirements.txt  semantic_context.txt  semantic_model.json  semantic_model.py  semantic_to_text.py
backend/app/: config.py  exceptions.py  logging_config.py  main.py  schemas.py
backend/app/api/: ask.py  forecast.py  realtime.py
backend/app/db/: connection.py
backend/app/features/: build_features.py
backend/app/llm/: client.py  explainer.py  model_registry.py  planner.py  providers.py  rag.py
backend/app/models/: arima.py  ensemble.py  lstm.py  (+2 more)
frontend/: app.py  sql_app.py
frontend-next/: package-lock.json  package.json  tsconfig.json
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: chat-window.tsx  message-card.tsx  provider-selector.tsx  sidebar.tsx  sql-table.tsx  voice-input.tsx
frontend-next/types/: chat.ts
mcp_server/: server.py  sql_server.py
mcp_server/policies/: dax_rules.py  sql_rules.py
mcp_server/tools/: answer_summarizer.py  arima_model.py  business_dimension_mapper.py  business_dimensions.py  cache.py  data_loader.py  dax_executor.py  dax_generator.py  dax_validator.py  dimension_selector.py  ensemble.py  evaluation.py  feature_engineering.py  llm_judge.py  lstm_model.py  nl_explainer.py  nl_response.py  predictor.py  query_interpreter.py  query_rewriter.py  rag_semantic.py  reranker.py  schema_cache.py  schema_retriever.py  semantic_planner.py  sql_executer.py  sql_generator.py  sql_validator.py  xgboost_model.py
(+7 files in other folders)
