[project]
name = "sql-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "contourpy",
    "cycler",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.7",
    "fonttools",
    "groq>=1.0.0",
    "joblib",
    "keras>=3.13.2",
    "kiwisolver",
    "matplotlib",
    "mcp>=1.26.0",
    "microsoft>=0.1.2",
    "modelcontextprotocol>=1.0.1",
    "msal>=1.35.1",
    "numpy>=2.4.2",
    "openai>=2.20.0",
    "pandas>=2.3.3",
    "pillow",
    "plotly",
    "pyadomd>=0.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyodbc>=5.3.0",
    "pyparsing",
    "python-dateutil",
    "python-dotenv>=1.2.1",
    "pythonnet>=3.0.5",
    "requests>=2.32.5",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers>=5.3.0",
    "shapely",
    "six",
    "statsmodels>=0.14.6",
    "streamlit>=1.54.0",
    "tensorflow>=2.20.0",
    "threadpoolctl",
    "tzdata",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=3.2.0",
]
